<resources>
    <string name="app_name">APPN2</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>

    <string name="sun">DOM</string>
    <string name="mon">SEG</string>
    <string name="tue">TER</string>
    <string name="wed">QUA</string>
    <string name="thu">QUI</string>
    <string name="fri">SEX</string>
    <string name="sat">SAB</string>
    <string name="week">SEMANA</string>
    <string name="month">MÊS</string>
    <string name="plus">+</string>
    <string name="title">Título:</string>
    <string name="date">Data:</string>
    <string name="time">Hora:</string>
    <string name="save">Salvar</string>
    <string name="pickImage">IMAGEM</string>
    <string name="pickTime">HORA</string>

</resources>